--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-DATABASE_URI="mysql+mysqlconnector://root:Venu2425@localhost/ai_db"
+DATABASE_URI=""
 
 # API Keys
 VAPI_API_KEY="40914156-b267-4144-893b-0f2907ed08eb"
